package com.esi.smartfarming.enums;

public enum StageCroissance { SEMIS, GERMINATION, CROISSANCE, MATURITE, RECOLTE }
