package com.esi.smartfarming.enums;

public enum TypeFamille { CEREALE, LEGUME, FRUIT }
