classDiagram
 %% INTERFACE
 class Suspendable {
 <<interface>>
 + suspendre() void
 + activer() void
 }
 %% ENUMERATIONS
 class StatutZone {
 <<enumeration>>
 ACTIVE
 SUSPENDUE
 }
 class TypeFamille {
 <<enumeration>>
 CEREALE
 LEGUME
 FRUIT
 }
 class StageCroissance {
 <<enumeration>>
 SEMIS
 GERMINATION
 CROISSANCE
 MATURITE
 RECOLTE
 }
 class StatutAnimal {
 <<enumeration>>
 SAIN
 MALADE
 QUARANTAINE
 }
 class StatutCapteur {
 <<enumeration>>
 ACTIF
 DEFAILLANT
 SUSPENDU
 }
 class NiveauGravite {
 <<enumeration>>
 AVERTISSEMENT
 CRITIQUE
 }
 class NiveauReleve {
 <<enumeration>>
 NORMAL
 AVERTISSEMENT
 CRITIQUE
 }
 %% ZONE
 class Zone {
 <<abstract>>
 # code : String
 # nom : String
 # statut : StatutZone
 # capteurs : List~Capteur~
 + getCode() String
 + getNom() String
 + getStatut() StatutZone
 + getCapteurs() List~Capteur~
 + suspendre() void
 + activer() void
 # getHistorique()* HistoriqueProduction
 }
 class ZoneCulture {
 - cultures : List~Culture~
 - capteursEnv : List~CapteurEnvironnemental~
 - capteursSol : List~CapteurSol~
 + ajouterCulture(c : Culture) void
 + getCultures() List~Culture~
 + genererRapportCultures() String
 + enregistrerRendement(valeur : double, date : Date) void
 }
 class ZoneElevage {
 - animaux : List~Animal~
 - programmeAlimentation : ProgrammeAlimentation
 + ajouterAnimal(a : Animal) void
 + getAnimaux() List~Animal~
 + setProgrammeAlimentation(p : ProgrammeAlimentation) void
 + getProgrammeAlimentation() ProgrammeAlimentation
 }
 class ZoneAquacole {
 - especes : List~EspeceAquacole~
 - capteursEau : List~CapteurEau~
 - programmeAlimentation : ProgrammeAlimentation
 + ajouterEspece(e : EspeceAquacole) void
 + getEspeces() List~EspeceAquacole~
 + setProgrammeAlimentation(p : ProgrammeAlimentation) void
 }
 %% CULTURE / ANIMAL
 class Culture {
 - id : int
 - nom : String
 - famille : TypeFamille
 - datePlantation : Date
 - dateRecoltePrevu : Date
 - stageCroissance : StageCroissance
 - pHMin : double
 - pHMax : double
 - humiditeMin : double
 - humiditeMax : double
 + getId() int
 + getNom() String
 + getFamille() TypeFamille
 + getStageCroissance() StageCroissance
 + setStageCroissance(s : StageCroissance) void
 + getExigencesPedologiques() String
 }
 class Animal {
 <<abstract>>
 - numero : int
 - espece : String
 - age : int
 - poids : double
 - etatSante : StatutAnimal
 - capteurBiometrique : CapteurBiometrique
 - capteurGPS : CapteurGPS
 - evenements : List~EvenementSanitaire~
 + getNumero() int
 + getEspece() String
 + getAge() int
 + getPoids() double
 + setPoids(p : double) void
 + getEtatSante() StatutAnimal
 + setEtatSante(s : StatutAnimal) void
 + ajouterEvenement(e : EvenementSanitaire) void
 # verifierLimites(z : ZoneElevage)* boolean
 }
 class Ruminant { + enregistrerProduction(lait : double, date : Date) void }
 class Volaille { + enregistrerProduction(nbOeufs : int, date : Date) void }
 class EspeceAquacole {
 - id : int
 - espece : String
 - nombre : int
 + getId() int
 + getEspece() String
 + getNombre() int
 }
 %% CAPTEURS
 class Capteur {
 <<abstract>>
 # code : String
 # zone : Zone
 # statut : StatutCapteur
 # seuilMin : double
 # seuilMax : double
 + getCode() String
 + getZone() Zone
 + getStatut() StatutCapteur
 + getSeuilMin() double
 + getSeuilMax() double
 + suspendre() void
 + activer() void
 }
 class CapteurNumerique {
 <<abstract>>
 # unite : String
 # historique : List~ReleveNumerique~
 + getUnite() String
 + getHistorique() List~ReleveNumerique~
 + envoyerReleve()* ReleveNumerique
 # verifierSeuil(valeur : double) boolean
 }
 class CapteurEnvironnemental { - typeCapture : String + envoyerReleve() ReleveNumerique }
 class CapteurSol { - typeCapture : String + envoyerReleve() ReleveNumerique }
 class CapteurBiometrique { - animal : Animal - typeCapture : String + envoyerReleve() ReleveNumerique }
 class CapteurEau { - typeCapture : String + envoyerReleve() ReleveNumerique }
 class CapteurGPS {
 - animal : Animal
 - historiqueGPS : List~ReleveGPS~
 + getHistoriqueGPS() List~ReleveGPS~
 + envoyerReleve() ReleveGPS
 }
 %% RELEVES
 class Releve {
 <<abstract>>
 # id : int
 # capteur : Capteur
 # dateHeure : Date
 # niveau : NiveauReleve
 + getId() int
 + getCapteur() Capteur
 + getDateHeure() Date
 + getNiveau() NiveauReleve
 }
 class ReleveNumerique {
 - valeur : double
 - unite : String
 - capteurNumerique : CapteurNumerique
 + getValeur() double
 + getUnite() String
 + getCapteurNumerique() CapteurNumerique
 }
 class ReleveGPS {
 - latitude : double
 - longitude : double
 - capteurGPS : CapteurGPS
 + getLatitude() double
 + getLongitude() double
 + getCapteurGPS() CapteurGPS
 }
 class Alerte {
 - id : int
 - releve : Releve
 - niveauGravite : NiveauGravite
 - dateHeure : Date
 - acquittee : boolean
 + getId() int
 + getReleve() Releve
 + getNiveauGravite() NiveauGravite
 + getDateHeure() Date
 + acquitter() void
 + supprimer() void
 + isAcquittee() boolean
 }
 class ProgrammeAlimentation { - typeAliment : String - quantiteParRepas : double + getTypeAliment() String + getQuantiteParRepas() double }
 class EvenementSanitaire { - id : int - animal : Animal - description : String - date : Date - nouveauPoids : double + getId() int + getAnimal() Animal + getDescription() String + getDate() Date + getNouveauPoids() double }
 class HistoriqueProduction { <<abstract>> # zone : Zone # date : Date + getZone() Zone + getDate() Date + enregistrer()* void }
 class HistoriqueCulture { - rendement : double + enregistrer() void }
 class HistoriqueLait { - quantiteLait : double + enregistrer() void }
 class HistoriqueOeuf { - nombreOeufs : int + enregistrer() void }
 class HistoriqueAquacole { - poidsRecolte : double + enregistrer() void }
 %% HERITAGE
 Suspendable <|.. Zone
 Suspendable <|.. Capteur
 Zone <|-- ZoneCulture
 Zone <|-- ZoneElevage
 Zone <|-- ZoneAquacole
 Animal <|-- Ruminant
 Animal <|-- Volaille
 Capteur <|-- CapteurNumerique
 CapteurNumerique <|-- CapteurEnvironnemental
 CapteurNumerique <|-- CapteurSol
 CapteurNumerique <|-- CapteurBiometrique
 CapteurNumerique <|-- CapteurEau
 Capteur <|-- CapteurGPS
 Releve <|-- ReleveNumerique
 Releve <|-- ReleveGPS
 HistoriqueProduction <|-- HistoriqueCulture
 HistoriqueProduction <|-- HistoriqueLait
 HistoriqueProduction <|-- HistoriqueOeuf
 HistoriqueProduction <|-- HistoriqueAquacole
 %% RELATIONS
 ZoneCulture "1" o-- "0..*" Culture : contient
 ZoneCulture "1" o-- "0..*" CapteurEnvironnemental : equipee de
 ZoneCulture "1" o-- "0..*" CapteurSol : equipee de
 ZoneCulture "1" *-- "0..1" HistoriqueCulture : historique
 ZoneElevage "1" o-- "0..*" Animal : accueille
 ZoneElevage "1" *-- "1" ProgrammeAlimentation : definit
 ZoneElevage "1" *-- "0..1" HistoriqueLait : historique
 ZoneElevage "1" *-- "0..1" HistoriqueOeuf : historique
 ZoneAquacole "1" o-- "0..*" EspeceAquacole : accueille
 ZoneAquacole "1" o-- "0..*" CapteurEau : equipee de
 ZoneAquacole "1" *-- "1" ProgrammeAlimentation : definit
 ZoneAquacole "1" *-- "0..1" HistoriqueAquacole : historique
 Animal "1" *-- "1" CapteurBiometrique : suivi par
 Animal "1" o-- "0..1" CapteurGPS : equipe de
 Animal "1" o-- "0..*" EvenementSanitaire : consigne
 CapteurNumerique "1" *-- "0..*" ReleveNumerique : genere
 CapteurGPS "1" *-- "0..*" ReleveGPS : genere
 Releve "1" ..> "0..1" Alerte : declenche
 ReleveNumerique --> CapteurNumerique : provient de
 ReleveGPS --> CapteurGPS : provient de
